Groups Admin: Float group avatar (similar to user list.) Fixes incorrectly positioned Group Name and whitespace from hidden post-row. See #5645.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@8424 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-groups/admin/css/admin-rtl.css
+++ b/src/bp-groups/admin/css/admin-rtl.css
@@ -7,6 +7,11 @@ body.toplevel_page_bp-groups table.groups th#last_active {
 	width: 15%;
 }
 
+#bp-groups-form .avatar {
+	float: right;
+	margin-left: 10px;
+	margin-top: 1px;
+}
 #bp-groups-edit-form input {
 	outline: medium none;
 }
