--- a/src/bp-groups/admin/css/admin.css
+++ b/src/bp-groups/admin/css/admin.css
@@ -7,6 +7,11 @@ body.toplevel_page_bp-groups table.groups th#last_active {
 	width: 15%;
 }
 
+#bp-groups-form .avatar {
+	float: left;
+	margin-right: 10px;
+	margin-top: 1px;
+}
 #bp-groups-edit-form input {
 	outline: medium none;
 }
